fixed bookinfo realign bug
fixed bookinfo realign bug

--- a/Assets/Stylesheets/onebooklayout.css
+++ b/Assets/Stylesheets/onebooklayout.css
@@ -157,6 +157,12 @@
 	.bookentry-container-parent .bookentry-container .buttons-container {
 		flex-direction: column;
 	}
+
+	.bookentrybar-container {
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
 }
 
 @media (max-width: 400px) {
